--- a/gateway-server.yml
+++ b/gateway-server.yml
@@ -5,13 +5,15 @@ spring:
         locator:
           enabled: 'true'
           lower-case-service-id: 'true'
+
 eureka:
-  instance:
-    preferIpAddress: 'true'
   client:
-    fetchRegistry: 'true'
-    registerWithEureka: 'true'
-    serviceUrl:
-      defaultZone: http://localhost:8761/eureka
+    fetchRegistry: true
+       registerWithEureka: true
+     serviceUrl:
+       defaultZone: http://localhost:8761/eureka
+  instance:
+    preferIpAddress: true
+
 zipkin:
   baseUrl: http://localhost:9411
