--- a/gateway-server.yml
+++ b/gateway-server.yml
@@ -3,14 +3,14 @@ spring:
     gateway:
       discovery:
         locator:
-          enabled: 'true'
-          lower-case-service-id: 'true'
+          enabled: true
+          lower-case-service-id: true
 
 eureka:
   client:
     fetchRegistry: true
-       registerWithEureka: true
-     serviceUrl:
+    registerWithEureka: true
+    serviceUrl:
        defaultZone: http://localhost:8761/eureka
   instance:
     preferIpAddress: true
